[gd_scene load_steps=8 format=2]

[ext_resource path="res://EnemyTeleport.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemey_teleport.png" type="Texture" id=2]
[ext_resource path="res://particles/enemyaboutto.tscn" type="PackedScene" id=3]
[ext_resource path="res://particles/enemydefeatring.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 192.0

[node name="EnemyTeleport" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
shape = SubResource( 3 )

[node name="enemyaboutto" parent="." instance=ExtResource( 3 )]

[node name="enemydefeatring" parent="." instance=ExtResource( 4 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_PlayerDetectArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea" to="." method="_on_PlayerDetectArea_body_exited"]
